# DocAnalyzer

./: main.py  pyproject.toml
data/chroma/: chroma.sqlite3
src/: config.py
src/ingestion/: embeddings.py  loader.py  pipeline.py  splitter.py  vector_store.py
src/rag/: chain.py  llm.py  prompts.py  retriever.py
